설문조사 결과  :  /survey_list였나

--- a/flask-server/test.ipynb
+++ b/flask-server/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,14 +213,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = item_list()\n",
+    "a."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "survey = dict()\n",
+    "survey['1a'] = ['깊은', '깊은 풍미를','씁쓸한','씁쓸함이', '풍미', '풍미 짙은', '풍미가', '풍미가 짙은','풍미까지', '풍미는', '풍미를', '풍미와', '진득한', '진한']\n",
+    "survey['1b'] = ['고소','고소하고','고소한', '고소함과', '구수하면서도', '구수한','부드러운', '부드러운 단맛', '부드럽게', '부드럽고', '부드럽고 깔끔한']\n",
+    "survey['1c'] = ['산미', '산미가','산미는', '산미를', '산미와', '신맛이', '여운을', '여운이', '은은하게', '은은한', '은은한 단맛과']\n",
+    "survey['2a'] = [ '가벼운', '가볍게', '가볍고', '산뜻하게', '산뜻한', '상쾌한','시트러스', '싱그러운', '싱그럽게']\n",
+    "survey['2b'] = [ '묵직한', '바디감과', '바디감을', '바디감이','오크','오크통', '자연','중후한']\n",
+    "survey['3a'] = ['사이다','시원하게','시원한', '스파클링', '쏘는', '자극하는', '차가운','차갑게', '청량감', '탄산', '탄산과','탄산이']\n",
+    "survey['3b'] = ['기름진','기름진 깔끔하게','깔끔하게', '깔끔하고', '깔끔한', '느끼한', '느끼함을','부드럽고 깔끔한','여운을', '여운이', '은은하게', '은은한', '은은한 단맛과']\n",
+    "survey['4a'] = [ '단맛', '단맛과', '단맛과 산미가', '단맛으로','단맛은', '단맛을', '단맛이', '달달한', '달지', '달짝지근한', '달콤', '달콤하게', '달콤하고', '달콤하면서도', '달콤한', '달콤함','달콤함과', '달콤함은', '달콤함이', '부드러운', '부드러운 단맛', '부드럽게', '부드럽고', '부드럽고 깔끔한', '스위트']\n",
+    "survey['4b'] = [ '깔끔하게', '깔끔하고', '깔끔한','부드럽고 깔끔한','시원하게', '시원한', '차가운', '차갑게']\n",
+    "survey['4c'] = [ '단맛','단맛과','단맛과 산미가','단맛으로','단맛은', '단맛을', '단맛이', '달달한', '달지', '달짝지근한', '달콤', '달콤하게', '달콤하고', '달콤하면서도','달콤한', '달콤함', '달콤함과', '달콤함은', '달콤함이', '산미', '산미가', '산미는', '산미를','산미와', '상큼한', '새콤달콤한', '새콤달콤함이','새콤한', '신맛이']\n",
+    "survey['5a'] = [ '국물','매운', '매운맛을', '매콤한', '매콤한 양념이', '안주', '안주류와', '안주와', '양념', '양념된', '양념이', '양념이 강한', '짭조름한', '짭짤한', '해산물']\n",
+    "survey['5b'] = [ '국물','깔끔하게', '깔끔하고', '깔끔한', '담백하고','담백한', '해산물', '간장', '기름진', '기름진 깔끔하게', '안주','안주류와','안주와']\n",
+    "survey['5c'] = [ '해산물', '안주', '안주류와','안주와', '생선회', '신선한','자연']\n",
+    "\n",
     "class item_list:\n",
     "    def __init__(self, cid = -1):\n",
     "        self.conn = sqlite3.connect('./db/alryeoju.db')\n",
@@ -348,6 +366,35 @@
     "        else:\n",
     "            al_df = self.get_alcohols_df_by_category(category)\n",
     "        return al_df.T.to_json(force_ascii=False)\n",
+    "    \n",
+    "\n",
+    "    def servey(self):\n",
+    "        include = list(set(survey['1a'] + survey['2a'] + survey['3a'] + survey['4a'] + survey['5a']))\n",
+    "        dic = dict()\n",
+    "        for t in token_list[:-1]:\n",
+    "            if t in include:\n",
+    "                dic[t] = [1]\n",
+    "            else:\n",
+    "                dic[t] = [0]\n",
+    "\n",
+    "        ans = pd.DataFrame(dic)\n",
+    "\n",
+    "        a = item_list()\n",
+    "        items = a.item_profile_df()\n",
+    "        item_profile = items[token_list[:-1]]\n",
+    "\n",
+    "        similarity = cosine_similarity(ans, item_profile) \n",
+    "        top_6_idx = np.argsort(similarity[0])[::-1][:6]\n",
+    "        top_6_ids = items.loc[top_6_idx].al_id.to_list()\n",
+    "\n",
+    "\n",
+    "\n",
+    "        result = dict()\n",
+    "        for idx, id in enumerate(top_6_ids):\n",
+    "            detail_data = detail_info(alid=id)\n",
+    "            result[idx] = detail_data.detail_page(page=2)['al_data']\n",
+    "\n",
+    "        return result\n",
     "\n"
    ]
   },
@@ -983,6 +1030,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "survey = dict()\n",
+    "survey['1a'] = ['깊은', '깊은 풍미를','씁쓸한','씁쓸함이', '풍미', '풍미 짙은', '풍미가', '풍미가 짙은','풍미까지', '풍미는', '풍미를', '풍미와', '진득한', '진한']\n",
+    "survey['1b'] = ['고소','고소하고','고소한', '고소함과', '구수하면서도', '구수한','부드러운', '부드러운 단맛', '부드럽게', '부드럽고', '부드럽고 깔끔한']\n",
+    "survey['1c'] = ['산미', '산미가','산미는', '산미를', '산미와', '신맛이', '여운을', '여운이', '은은하게', '은은한', '은은한 단맛과']\n",
+    "survey['2a'] = [ '가벼운', '가볍게', '가볍고', '산뜻하게', '산뜻한', '상쾌한','시트러스', '싱그러운', '싱그럽게']\n",
+    "survey['2b'] = [ '묵직한', '바디감과', '바디감을', '바디감이','오크','오크통', '자연','중후한']\n",
+    "survey['3a'] = ['사이다','시원하게','시원한', '스파클링', '쏘는', '자극하는', '차가운','차갑게', '청량감', '탄산', '탄산과','탄산이']\n",
+    "survey['3b'] = ['기름진','기름진 깔끔하게','깔끔하게', '깔끔하고', '깔끔한', '느끼한', '느끼함을','부드럽고 깔끔한','여운을', '여운이', '은은하게', '은은한', '은은한 단맛과']\n",
+    "survey['4a'] = [ '단맛', '단맛과', '단맛과 산미가', '단맛으로','단맛은', '단맛을', '단맛이', '달달한', '달지', '달짝지근한', '달콤', '달콤하게', '달콤하고', '달콤하면서도', '달콤한', '달콤함','달콤함과', '달콤함은', '달콤함이', '부드러운', '부드러운 단맛', '부드럽게', '부드럽고', '부드럽고 깔끔한', '스위트']\n",
+    "survey['4b'] = [ '깔끔하게', '깔끔하고', '깔끔한','부드럽고 깔끔한','시원하게', '시원한', '차가운', '차갑게']\n",
+    "survey['4c'] = [ '단맛','단맛과','단맛과 산미가','단맛으로','단맛은', '단맛을', '단맛이', '달달한', '달지', '달짝지근한', '달콤', '달콤하게', '달콤하고', '달콤하면서도','달콤한', '달콤함', '달콤함과', '달콤함은', '달콤함이', '산미', '산미가', '산미는', '산미를','산미와', '상큼한', '새콤달콤한', '새콤달콤함이','새콤한', '신맛이']\n",
+    "survey['5a'] = [ '국물','매운', '매운맛을', '매콤한', '매콤한 양념이', '안주', '안주류와', '안주와', '양념', '양념된', '양념이', '양념이 강한', '짭조름한', '짭짤한', '해산물']\n",
+    "survey['5b'] = [ '국물','깔끔하게', '깔끔하고', '깔끔한', '담백하고','담백한', '해산물', '간장', '기름진', '기름진 깔끔하게', '안주','안주류와','안주와']\n",
+    "survey['5c'] = [ '해산물', '안주', '안주류와','안주와', '생선회', '신선한','자연']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -994,6 +1063,166 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: {'al_id': 220,\n",
+       "  'al_name': '스윗마마',\n",
+       "  'category': '과실주',\n",
+       "  'price': 5900.0,\n",
+       "  'degree': 5.5,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2Fi16g-1642143634927-swmm0.jpg&w=3840&q=75'},\n",
+       " 1: {'al_id': 147,\n",
+       "  'al_name': '술아 국화주',\n",
+       "  'category': '약주',\n",
+       "  'price': 20000.0,\n",
+       "  'degree': 15.0,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2F0tUF-1650544574118-1.jpg&w=3840&q=75'},\n",
+       " 2: {'al_id': 1149,\n",
+       "  'al_name': '샤토미소 랑 화이트와인 (스위트)',\n",
+       "  'category': '과실주',\n",
+       "  'price': 22000.0,\n",
+       "  'degree': 12.0,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2FiHoy-1638522991814-%25EC%2583%25A4%25ED%2586%25A0%25EB%25AF%25B8%25EC%2586%258C%2520%25EB%259E%2591%2520%25ED%2599%2594%25EC%259D%25B4%25ED%258A%25B8%2520%25EC%2599%2580%25EC%259D%25B8%2528%25EC%258A%25A4%25EC%259C%2584%25ED%258A%25B8%2529.jpg&w=3840&q=75'},\n",
+       " 3: {'al_id': 133,\n",
+       "  'al_name': '담은',\n",
+       "  'category': '탁주',\n",
+       "  'price': 33000.0,\n",
+       "  'degree': 6.5,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2FR1o4-1657597732636-00.jpg&w=3840&q=75'},\n",
+       " 4: {'al_id': 1188,\n",
+       "  'al_name': '아카시아 미드 Batch3',\n",
+       "  'category': '과실주',\n",
+       "  'price': 21000.0,\n",
+       "  'degree': 8.0,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2Fk2fE-1643368081532-acsamd0.jpg&w=3840&q=75'},\n",
+       " 5: {'al_id': 141,\n",
+       "  'al_name': '구름을 벗삼아',\n",
+       "  'category': '탁주',\n",
+       "  'price': 17500.0,\n",
+       "  'degree': 6.0,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2FbmA6-1657597572597-00.jpg&w=3840&q=75'}}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>가득한</th>\n",
+       "      <th>가벼운</th>\n",
+       "      <th>가볍게</th>\n",
+       "      <th>가볍고</th>\n",
+       "      <th>간단한</th>\n",
+       "      <th>간장</th>\n",
+       "      <th>감압식</th>\n",
+       "      <th>감압식 증류</th>\n",
+       "      <th>감칠맛</th>\n",
+       "      <th>감칠맛을</th>\n",
+       "      <th>...</th>\n",
+       "      <th>풍미는</th>\n",
+       "      <th>풍미를</th>\n",
+       "      <th>풍미와</th>\n",
+       "      <th>풍부하게</th>\n",
+       "      <th>풍부한</th>\n",
+       "      <th>해산물</th>\n",
+       "      <th>향긋한</th>\n",
+       "      <th>화이트</th>\n",
+       "      <th>효모를</th>\n",
+       "      <th>degree</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 301 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [가득한, 가벼운, 가볍게, 가볍고, 간단한, 간장, 감압식, 감압식 증류, 감칠맛, 감칠맛을, 감칠맛이, 강렬한, 강하게, 강하지, 강한, 거친, 고구마, 고구마의, 고기, 고소, 고소하고, 고소한, 고소함과, 고운달, 곡물, 곡물의, 과실, 과실의, 과일, 구수하면서도, 구수한, 국물, 궁합을, 궁합이, 기름진, 기름진 깔끔하게, 기분, 깊은, 깊은 풍미를, 깔끔하게, 깔끔하고, 깔끔한, 냉장, 냉장고에, 냉장고에서, 높고, 높은, 높은 도수를, 높은 도수와, 누룩, 누룩으로, 누룩을, 누룩의, 느끼한, 느끼함을, 다양한, 다채로운, 단맛, 단맛과, 단맛과 산미가, 단맛으로, 단맛은, 단맛을, 단맛이, 달달한, 달지, 달짝지근한, 달콤, 달콤하게, 달콤하고, 달콤하면서도, 달콤한, 달콤함, 달콤함과, 달콤함은, 달콤함이, 담백하고, 담백한, 도수가, 도수를, 도수에, 도수와, 독특한, 독특한 풍미를, 동백꽃, 드라이한, 디저트류와, 디저트와, 딸기, 떫은, 레드, 레몬, 로제, 막걸리, 막걸리는, 막걸리를, 막걸리의, 맑고, 맑은, 매실, ...]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 301 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(columns=token_list)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1005,7 +1234,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1019,12 +1248,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5e41fa78e420061c3cb3bc62cf0dcec1f8919f832b4938c3b1160d32173604ce"
+    "hash": "17d64356d8de79b5842e065b25b51719170ca31eef171827c5642a6aa38d2332"
    }
   }
  },
